--- a/src/main/resources/simpleview.fxml
+++ b/src/main/resources/simpleview.fxml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" spacing="10">
-    <padding>
-        <Insets top="10" right="10" bottom="10" left="10"/>
-    </padding>
+<BorderPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+            stylesheets="@chatbot.css">
 
-    <Label text="Chatbot Simple" style="-fx-font-size: 18px; -fx-font-weight: bold;" />
+    <center>
+        <VBox spacing="10" styleClass="chat-container" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets top="16" right="16" bottom="16" left="16"/>
+            </padding>
 
-    <ScrollPane fx:id="scrollPane" prefHeight="300" fitToWidth="true">
-        <VBox fx:id="chatMessages" spacing="5" />
-    </ScrollPane>
+            <Text text="JavaFX ChatBot" styleClass="header-text"/>
 
-    <HBox spacing="5">
-        <TextField fx:id="inputField" HBox.hgrow="ALWAYS" promptText="Tape ton message..." />
-        <Button text="Envoyer" />
-    </HBox>
-</VBox>
+            <ListView fx:id="messageListView" styleClass="message-list" VBox.vgrow="ALWAYS"/>
+
+            <HBox spacing="10" alignment="CENTER" styleClass="input-container">
+                <TextField fx:id="messageInput" promptText="Type your message here..." HBox.hgrow="ALWAYS" />
+                <Button fx:id="sendButton" text="Send" styleClass="send-button" mnemonicParsing="false" />
+                <Button fx:id="clearButton" text="Clear" styleClass="clear-button" mnemonicParsing="false" />
+            </HBox>
+        </VBox>
+    </center>
+
+</BorderPane>
